Status page, adding ingredients and cleaning the machine